# testsweet-django

./: .gitignore  CLAUDE.md  README.md  django_settings.py  pyproject.toml
docs/: example.py  tutorial.md
src/testsweet_django/: __init__.py  isolation.py  plugin.py
tests/: test_plugin.py  test_tutorial.py
